# interfaze-complete-benchmarks

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
benchmarks/aime/: aime_2025.py
benchmarks/asr/: _probe_voxpopuli_missing.py  voxpopuli_aa.py  voxpopuli_aa_multi.py
benchmarks/cc_ocr/: cc_ocr_doc_parsing.py  cc_ocr_kie.py  cc_ocr_multi_scene.py  cc_ocr_multilingual.py
benchmarks/gpqa/: gpqa_gemini.py  gpqa_openai.py  gpqa_openrouter.py
benchmarks/mmmlu/: mmmlu.py  mmmlu_multi.py
benchmarks/mmmu_pro/: mmmu_pro_multi.py  modal_app.py  run_full.sh  run_smoke.sh
benchmarks/obj_detection/: _probe_grok_reasoning.py  ob_det_api.py  reeval_format_tolerant.py  refcoco.py  refcoco_gemini.py  refcoco_grok.py  refcoco_kimi.py  refcoco_multi.py  refcoco_openai.py
benchmarks/ocrbench_v2/: ocrbench_v2.py  ocrbench_v2_anthropic.py  ocrbench_v2_gemini.py  ocrbench_v2_gemini_pro_31.py  ocrbench_v2_grok.py  ocrbench_v2_kimi.py  ocrbench_v2_openai.py  ocrbench_v2_openai_mini.py  ocrbench_v2_text_spotting_en.py
benchmarks/olmocr/: olmocr_bench.py  olmocr_bench_chandra_ocr2.py  olmocr_bench_gemini_pro_31.py  olmocr_bench_grok.py  olmocr_bench_openai_mini.py  olmocr_bench_reducto.py
benchmarks/screenspot_pro/: audit_parser.py  modal_app.py  prefetch_images.py  reeval.py  run_smoke.sh  screenspot_pro_multi.py
benchmarks/spider2_lite/: fetch_data.py  spider2_lite.py
benchmarks/spider2_lite_sqlite/: eval_helpers.py  spider2_lite_sqlite.py  (+9 more)
src/: commons.py  commons_anthropic.py  commons_gemini.py  commons_openai.py  commons_openrouter.py  commons_reducto.py
(+16 files in other folders)
