[project]
name = "interfaze-complete-benchmarks"
version = "0.1.2"
description = "Interfaze benchmarked for deterministic tasks"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "ipdb>=0.13.13",
    "openai>=2.26.0",
    "pillow>=12.1.1",
    "polygon3>=3.0.9.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.5",
    "tqdm>=4.66.0",
    "nltk>=3.9.0",
    "apted>=1.0.3",
    "lxml>=5.0.0",
    "zss>=1.2.0",
    "Pillow>=10.0.0",
    "Levenshtein>=0.25.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.11.0",
    "evaluate>=0.4.0",
    "tabulate>=0.9.0",
    "pylatexenc>=3.0a30",
    "loguru>=0.7.0",
    "func-timeout>=4.3.5",
    "scikit-image>=0.21.0",
    "editdistance>=0.8.0",
    "jieba>=0.42.0",
    "Polygon3>=3.0.0",
    "matplotlib>=3.7.0",
    "opencv-python>=4.10.0",
    "pycocotools>=2.0.7",
    "mmeval>=0.2.1",
    "ipdb>=0.13.0",
    "distance>=0.1.3",
    "huggingface>=0.0.1",
    "langchain-openai>=1.1.11",
    "langchain>=1.2.11",
    "olmocr==0.4.27",
    "pymupdf>=1.27.2",
]
